--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -3,9 +3,25 @@ meta:
   name: cfcr-compiled-deployment
   pipeline: (( grab meta.name ))
 
+  image:
+    name: starkandwayne/concourse
+    tag: latest
+
   github:
     private_key:  ((github-private-key))
     access_token: ((github-access-token))
+
+  aws:
+    bucket:     (( grab meta.pipeline ))
+    region_name: us-east-1
+    access_key: (( param "Please set your AWS Access Key ID for your pipeline S3 Bucket" ))
+    secret_key: (( param "Please set your AWS Secret Key ID for your pipeline S3 Bucket" ))
+
+  bosh-lite:
+    target:     (( param "Please specify the BOSH target URI for the bosh-lite to run test deployments against" ))
+    cacert:     (( param "Please specify the BOSH Director Root CA cert" ))
+    username:   admin
+    password:   (( param "Please specify the BOSH Director admin password" ))
 
 jobs:
 - name: noop
@@ -18,7 +34,47 @@ jobs:
     - get: docker-boshrelease
     - get: cfcr-etcd-release
 
+- name: docker-compile-release-3541
+  plan:
+    - aggregate:
+      - get: git
+      - get: docker-boshrelease
+        trigger: true
+      - get: ubuntu-trusty-stemcell-3541
+        params: {tarball: false}
+    - task: export-release
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: (( grab meta.image.name ))
+            tag:        (( grab meta.image.tag ))
+        inputs:
+          - name: git
+          - name: ubuntu-trusty-stemcell-3541
+            path: stemcell
+          - name: github
+            path: release
+        outputs:
+          - name: compiled-release
+        run:
+          path: git/ci/scripts/export-release
+        params:
+          BOSH_ENVIRONMENT:     (( grab meta.bosh-lite.target ))
+          BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
+          BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
+          BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
+    - put: compiled-releases
+      params:
+        file: "compiled-release/compiled-releases/*.tgz"
+
 resources:
+- name: git
+  type: git
+  source:
+    uri: git@github.com:starkandwayne/cfcr-compiled-deployment
+    private_key: (( grab meta.github.private_key ))
 - name: kubo-deployment
   type: git
   source:
@@ -47,3 +103,18 @@ resources:
     owner: cloudfoundry-incubator
     repository: cfcr-etcd-release
     access_token: (( grab meta.github.access_token ))
+
+- name: ubuntu-trusty-stemcell-3541
+  type: bosh-io-stemcell
+  source:
+    name: bosh-warden-boshlite-ubuntu-trusty-go_agent
+    version_family: 3541.latest
+
+- name: compiled-releases
+  type: s3
+  source:
+    bucket:            (( grab meta.aws.bucket ))
+    region_name:       (( grab meta.aws.region_name ))
+    access_key_id:     (( grab meta.aws.access_key ))
+    secret_access_key: (( grab meta.aws.secret_key ))
+    regexp:            "compiled-releases/.*-(\\d+).tgz"
