--- a/ci/settings.yml
+++ b/ci/settings.yml
@@ -7,3 +7,13 @@ meta:
   github:
     private_key:  ((github-private-key))
     access_token: ((github-access-token))
+
+  aws:
+    access_key: ((aws-cfcommunity-access))
+    secret_key: ((aws-cfcommunity-secret))
+
+  bosh-lite:
+    target:   ((bosh-lite-environment))
+    cacert:   ((bosh-lite-ca-cert))
+    username: ((bosh-lite-client))
+    password: ((bosh-lite-client-secret))
