--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -35,10 +35,12 @@ jobs:
     - get: cfcr-etcd-release
 
 - name: docker-compile-release-3541
+  serial_groups: [compile-release]
   plan:
     - aggregate:
       - get: git
-      - get: docker-boshrelease
+      - get: github
+        resource: docker-boshrelease
         trigger: true
       - get: ubuntu-trusty-stemcell-3541
         params: {tarball: false}
@@ -65,9 +67,9 @@ jobs:
           BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
           BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
           BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
-    - put: compiled-releases
+    - put: docker-compiled-release
       params:
-        file: "compiled-release/compiled-releases/*.tgz"
+        file: "compiled-release/docker/*.tgz"
 
 resources:
 - name: git
@@ -110,11 +112,11 @@ resources:
     name: bosh-warden-boshlite-ubuntu-trusty-go_agent
     version_family: 3541.latest
 
-- name: compiled-releases
+- name: docker-compiled-release
   type: s3
   source:
     bucket:            (( grab meta.aws.bucket ))
     region_name:       (( grab meta.aws.region_name ))
     access_key_id:     (( grab meta.aws.access_key ))
     secret_access_key: (( grab meta.aws.secret_key ))
-    regexp:            "compiled-releases/.*-(\\d+).tgz"
+    regexp:            "docker/.*-(\\d+).tgz"
