pass stemcell into manifest job

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -45,6 +45,9 @@ jobs:
         trigger: true
       - get: etcd-compiled-release
         passed: [etcd-compile-release-3541]
+      - get: ubuntu-trusty-stemcell-3541
+        passed: [kubo-compile-release-3541, docker-compile-release-3541]
+        params: {tarball: false}
     - task: update-manifest
       config:
         platform: linux
