--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -28,6 +28,10 @@ meta:
     password:   (( param "Please specify the BOSH Director admin password" ))
 
 jobs:
+- name: future
+  plan:
+    - get: etcd-compiled-release
+      passed: [etcd-compile-release-3541]
 - name: manifest
   plan:
     - aggregate:
@@ -44,8 +48,8 @@ jobs:
       - get: docker-compiled-release
         passed: [docker-compile-release-3541]
         trigger: true
-      - get: etcd-compiled-release
-        passed: [etcd-compile-release-3541]
+      - get: kubo-etcd-compiled-release
+        passed: [kubo-etcd-compile-release-3541]
       - get: ubuntu-trusty-stemcell-3541
         passed: [kubo-compile-release-3541, docker-compile-release-3541]
         params: {tarball: false}
@@ -232,6 +236,43 @@ jobs:
       params:
         file: "compiled-release/cfcr-etcd/*.tgz"
 
+- name: kubo-etcd-compile-release-3541
+  serial_groups: [compile-release]
+  plan:
+    - aggregate:
+      - get: git
+      - get: github
+        resource: kubo-etcd-release
+        trigger: true
+      - get: ubuntu-trusty-stemcell-3541
+        params: {tarball: false}
+    - task: export-release
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: (( grab meta.image.name ))
+            tag:        (( grab meta.image.tag ))
+        inputs:
+          - name: git
+          - name: ubuntu-trusty-stemcell-3541
+            path: stemcell
+          - name: github
+            path: release
+        outputs:
+          - name: compiled-release
+        run:
+          path: git/ci/scripts/export-release
+        params:
+          BOSH_ENVIRONMENT:     (( grab meta.bosh-lite.target ))
+          BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
+          BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
+          BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
+    - put: kubo-etcd-compiled-release
+      params:
+        file: "compiled-release/kubo-etcd/*.tgz"
+
 - name: kubo-compile-release-3541
   serial_groups: [compile-release]
   plan:
@@ -309,6 +350,12 @@ resources:
     owner: cloudfoundry-incubator
     repository: cfcr-etcd-release
     access_token: (( grab meta.github.access_token ))
+- name: kubo-etcd-release
+  type: github-release
+  source:
+    owner: pivotal-cf-experimental
+    repository: kubo-etcd
+    access_token: (( grab meta.github.access_token ))
 
 - name: ubuntu-trusty-stemcell-3541
   type: bosh-io-stemcell
@@ -344,6 +391,15 @@ resources:
     regexp:            "docker/.*-(\\d+).tgz"
 
 - name: etcd-compiled-release
+  type: s3
+  source:
+    bucket:            (( grab meta.aws.bucket ))
+    region_name:       (( grab meta.aws.region_name ))
+    access_key_id:     (( grab meta.aws.access_key ))
+    secret_access_key: (( grab meta.aws.secret_key ))
+    regexp:            "cfcr-etcd/.*-(\\d+).tgz"
+
+- name: kubo-etcd-compiled-release
   type: s3
   source:
     bucket:            (( grab meta.aws.bucket ))
