--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -67,7 +67,7 @@ jobs:
           - name: bosh-dns-compiled-release
           - name: bpm-compiled-release
           - name: docker-compiled-release
-          - name: etcd-compiled-release
+          - name: kubo-etcd-compiled-release
           - name: kubo-compiled-release
         outputs:
           - name: pushme
@@ -404,7 +404,7 @@ resources:
     region_name:       (( grab meta.aws.region_name ))
     access_key_id:     (( grab meta.aws.access_key ))
     secret_access_key: (( grab meta.aws.secret_key ))
-    regexp:            "cfcr-etcd/.*-(\\d+).tgz"
+    regexp:            "kubo-etcd/.*-(\\d+).tgz"
 
 - name: kubo-compiled-release
   type: s3
