switching to BUCC's BOSH for compilation + future test deployments

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -21,8 +21,8 @@ meta:
     access_key: (( param "Please set your AWS Access Key ID for your pipeline S3 Bucket" ))
     secret_key: (( param "Please set your AWS Secret Key ID for your pipeline S3 Bucket" ))
 
-  bosh-lite:
-    target:     (( param "Please specify the BOSH target URI for the bosh-lite to run test deployments against" ))
+  bosh:
+    target:     (( param "Please specify the BOSH target URI for the bosh to run test deployments against" ))
     cacert:     (( param "Please specify the BOSH Director Root CA cert" ))
     username:   admin
     password:   (( param "Please specify the BOSH Director admin password" ))
@@ -130,10 +130,10 @@ jobs:
         run:
           path: git/ci/scripts/export-release
         params:
-          BOSH_ENVIRONMENT:     (( grab meta.bosh-lite.target ))
-          BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
-          BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
-          BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
+          BOSH_ENVIRONMENT:     (( grab meta.bosh.target ))
+          BOSH_CA_CERT:         (( grab meta.bosh.cacert ))
+          BOSH_CLIENT:          (( grab meta.bosh.username ))
+          BOSH_CLIENT_SECRET:   (( grab meta.bosh.password ))
     - put: bpm-compiled-release
       params:
         file: "compiled-release/bpm/*.tgz"
@@ -167,10 +167,10 @@ jobs:
         run:
           path: git/ci/scripts/export-release
         params:
-          BOSH_ENVIRONMENT:     (( grab meta.bosh-lite.target ))
-          BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
-          BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
-          BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
+          BOSH_ENVIRONMENT:     (( grab meta.bosh.target ))
+          BOSH_CA_CERT:         (( grab meta.bosh.cacert ))
+          BOSH_CLIENT:          (( grab meta.bosh.username ))
+          BOSH_CLIENT_SECRET:   (( grab meta.bosh.password ))
     - put: bosh-dns-compiled-release
       params:
         file: "compiled-release/bosh-dns/*.tgz"
@@ -204,10 +204,10 @@ jobs:
         run:
           path: git/ci/scripts/export-release
         params:
-          BOSH_ENVIRONMENT:     (( grab meta.bosh-lite.target ))
-          BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
-          BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
-          BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
+          BOSH_ENVIRONMENT:     (( grab meta.bosh.target ))
+          BOSH_CA_CERT:         (( grab meta.bosh.cacert ))
+          BOSH_CLIENT:          (( grab meta.bosh.username ))
+          BOSH_CLIENT_SECRET:   (( grab meta.bosh.password ))
     - put: docker-compiled-release
       params:
         file: "compiled-release/docker/*.tgz"
@@ -241,10 +241,10 @@ jobs:
         run:
           path: git/ci/scripts/export-release
         params:
-          BOSH_ENVIRONMENT:     (( grab meta.bosh-lite.target ))
-          BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
-          BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
-          BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
+          BOSH_ENVIRONMENT:     (( grab meta.bosh.target ))
+          BOSH_CA_CERT:         (( grab meta.bosh.cacert ))
+          BOSH_CLIENT:          (( grab meta.bosh.username ))
+          BOSH_CLIENT_SECRET:   (( grab meta.bosh.password ))
     - put: etcd-compiled-release
       params:
         file: "compiled-release/cfcr-etcd/*.tgz"
@@ -278,10 +278,10 @@ jobs:
         run:
           path: git/ci/scripts/export-release
         params:
-          BOSH_ENVIRONMENT:     (( grab meta.bosh-lite.target ))
-          BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
-          BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
-          BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
+          BOSH_ENVIRONMENT:     (( grab meta.bosh.target ))
+          BOSH_CA_CERT:         (( grab meta.bosh.cacert ))
+          BOSH_CLIENT:          (( grab meta.bosh.username ))
+          BOSH_CLIENT_SECRET:   (( grab meta.bosh.password ))
     - put: kubo-etcd-compiled-release
       params:
         file: "compiled-release/kubo-etcd/*.tgz"
@@ -315,10 +315,10 @@ jobs:
         run:
           path: git/ci/scripts/export-release
         params:
-          BOSH_ENVIRONMENT:     (( grab meta.bosh-lite.target ))
-          BOSH_CA_CERT:         (( grab meta.bosh-lite.cacert ))
-          BOSH_CLIENT:          (( grab meta.bosh-lite.username ))
-          BOSH_CLIENT_SECRET:   (( grab meta.bosh-lite.password ))
+          BOSH_ENVIRONMENT:     (( grab meta.bosh.target ))
+          BOSH_CA_CERT:         (( grab meta.bosh.cacert ))
+          BOSH_CLIENT:          (( grab meta.bosh.username ))
+          BOSH_CLIENT_SECRET:   (( grab meta.bosh.password ))
     - put: kubo-compiled-release
       params:
         file: "compiled-release/kubo/*.tgz"
