--- a/ci/settings.yml
+++ b/ci/settings.yml
@@ -16,8 +16,8 @@ meta:
     access_key: ((aws-cfcommunity-access))
     secret_key: ((aws-cfcommunity-secret))
 
-  bosh-lite:
-    target:   ((bosh-lite-environment))
-    cacert:   ((bosh-lite-ca-cert))
-    username: ((bosh-lite-client))
-    password: ((bosh-lite-client-secret))
+  bosh:
+    target:   ((bosh_environment))
+    cacert:   ((bosh_ca_cert))
+    username: ((bosh_client))
+    password: ((bosh_client_secret))
