--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -66,7 +66,7 @@ jobs:
         put: bosh-deploy-testflight
         params:
           delete:
-            enable: true
+            enabled: true
             force:  true
           manifest: git/cfcr.yml
           ops_files: [git/operators/testflight.yml]
@@ -139,7 +139,7 @@ jobs:
         put: bosh-deploy-testflight
         params:
           delete:
-            enable: true
+            enabled: true
             force:  true
           manifest: git/cfcr.yml
           ops_files: [git/operators/testflight.yml]
