--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -39,13 +39,10 @@ groups:
 - name: future
   jobs:
   - future
-  - kubo-etcd-compile-release-3541
   - bosh-dns-compile-release-3541
 jobs:
 - name: future
   plan:
-    - get: etcd-compiled-release
-      passed: [etcd-compile-release-3541]
     - get: bosh-dns-compiled-release
       passed: [bosh-dns-compile-release-3541]
 - name: testflight
@@ -89,8 +86,8 @@ jobs:
           passed: [bpm-compile-release-3541]
         - get: docker-compiled-release
           passed: [docker-compile-release-3541]
-        - get: kubo-etcd-compiled-release
-          passed: [kubo-etcd-compile-release-3541]
+        - get: etcd-compiled-release
+          passed: [etcd-compile-release-3541]
         - get: ubuntu-trusty-stemcell-3541
           passed: [kubo-compile-release-3541]
           params: {tarball: false}
@@ -110,7 +107,7 @@ jobs:
             # - name: bosh-dns-compiled-release
             - name: bpm-compiled-release
             - name: docker-compiled-release
-            - name: kubo-etcd-compiled-release
+            - name: etcd-compiled-release
             - name: kubo-compiled-release
           outputs:
             - name: pushme
@@ -300,45 +297,6 @@ jobs:
       params:
         file: "compiled-release/cfcr-etcd/*.tgz"
 
-- name: kubo-etcd-compile-release-3541
-  public: true
-  serial: true
-  plan:
-    - aggregate:
-      - get: git
-      - get: github
-        resource: kubo-etcd-release
-        trigger: true
-      - get: ubuntu-trusty-stemcell-3541
-        params: {tarball: false}
-    - task: export-release
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: (( grab meta.image.name ))
-            tag:        (( grab meta.image.tag ))
-        inputs:
-          - name: git
-          - name: ubuntu-trusty-stemcell-3541
-            path: stemcell
-          - name: github
-            path: release
-        outputs:
-          - name: compiled-release
-        run:
-          path: git/ci/scripts/export-release
-        params:
-          BOSH_ENVIRONMENT:   (( grab meta.bosh.target ))
-          BOSH_CA_CERT:       (( grab meta.bosh.cacert ))
-          BOSH_CLIENT:        (( grab meta.bosh.username ))
-          BOSH_CLIENT_SECRET: (( grab meta.bosh.password ))
-          STEMCELL_CPI:       aws-xen-hvm
-    - put: kubo-etcd-compiled-release
-      params:
-        file: "compiled-release/kubo-etcd/*.tgz"
-
 - name: kubo-compile-release-3541
   public: true
   serial: true
@@ -417,12 +375,6 @@ resources:
     owner: cloudfoundry-incubator
     repository: cfcr-etcd-release
     access_token: (( grab meta.github.access_token ))
-- name: kubo-etcd-release
-  type: github-release
-  source:
-    owner: pivotal-cf-experimental
-    repository: kubo-etcd
-    access_token: (( grab meta.github.access_token ))
 
 - name: ubuntu-trusty-stemcell-3541
   type: bosh-io-stemcell
@@ -465,15 +417,6 @@ resources:
     access_key_id:     (( grab meta.aws.access_key ))
     secret_access_key: (( grab meta.aws.secret_key ))
     regexp:            "cfcr-etcd/.*-(\\d+).tgz"
-
-- name: kubo-etcd-compiled-release
-  type: s3
-  source:
-    bucket:            (( grab meta.aws.bucket ))
-    region_name:       (( grab meta.aws.region_name ))
-    access_key_id:     (( grab meta.aws.access_key ))
-    secret_access_key: (( grab meta.aws.secret_key ))
-    regexp:            "kubo-etcd/.*-(\\d+).tgz"
 
 - name: kubo-compiled-release
   type: s3
