only show bosh logs on failure; since it exits 1

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -128,7 +128,7 @@ jobs:
           - git/operators/rename.yml
           vars:
             deployment_name: cfcr-testflight
-        ensure:
+        on_failure:
           task: show-logs
           config:
             platform: linux
