--- a/ci/operators/testflight.yml
+++ b/ci/operators/testflight.yml
@@ -1,4 +1,8 @@
 ---
 - type: replace
+  path: /instance_groups/name=master/instances
+  value: 1
+
+- type: replace
   path: /instance_groups/name=worker/instances
   value: 1
