--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -80,8 +80,8 @@ jobs:
           params: {include_source_tarball: true, globs: [x]}
         - get: kubo-compiled-release
           passed: [kubo-compile-release-3586]
-        # - get: bosh-dns-compiled-release
-        #   passed: [bosh-dns-compile-release-3586]
+        - get: bosh-dns-compiled-release
+          passed: [bosh-dns-compile-release-3586]
         - get: bpm-compiled-release
           passed: [bpm-compile-release-3586]
         - get: docker-compiled-release
@@ -105,7 +105,7 @@ jobs:
             - name: cfcr-manifests
             - name: ubuntu-trusty-stemcell-3586
               path: stemcell
-            # - name: bosh-dns-compiled-release
+            - name: bosh-dns-compiled-release
             - name: bpm-compiled-release
             - name: docker-compiled-release
             - name: etcd-compiled-release
